@@ -106,9 +106,6 @@ public class ConcatWorkflowOperationHandler extends AbstractWorkflowOperationHan
   /** The composer service */
   private ComposerService composerService = null;
 
-  /** The local workspace */
-  private Workspace workspace = null;
-
   /**
    * Callback for the OSGi declarative services configuration.
    *
@@ -302,9 +299,8 @@ public class ConcatWorkflowOperationHandler extends AbstractWorkflowOperationHan
       logger.warn("No tracks found for concating operation, skipping concatenation!");
       return createResult(mediaPackage, Action.SKIP);
     } else if (tracks.size() == 1) {
-      Track track = (Track) tracks.get(0).clone();
-      track.setIdentifier(null);
-      addNewTrack(mediaPackage, track, targetTagsOption, targetFlavor);
+      Track copiedTrack = (Track) createDerivedMediaPackageElementFrom(tracks.getFirst());
+      addNewTrack(mediaPackage, copiedTrack, targetTagsOption, targetFlavor);
       logger.info("At least two tracks are needed for the concating operation, skipping concatenation!");
       return createResult(mediaPackage, Action.SKIP);
     }
